# ChangeLog for dev-perl/Devel-StackTrace
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Devel-StackTrace/ChangeLog,v 1.5 2003/04/22 22:58:14 rac Exp $

*Devel-StackTrace-1.03 (22 Apr 2003)

  22 Apr 2003; <rac@gentoo.org> Devel-StackTrace-1.02.ebuild,
  Devel-StackTrace-1.02.ebuild, Devel-StackTrace-1.03.ebuild:
  Version bump, thanks to Joshua J. Berry <condor-gentoo@condordes.net> in bug
  #18200

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*Devel-StackTrace-1.02 (13 Nov 2002)

  13 Nov 2002; Matthew Kennedy <mkennedy@gentoo.org>
  Devel-StackTrace-1.02.ebuild, ChangeLog,
  files/digest-Devel-StackTrace-1.02 :

  Initial import. Required dep by updated version of HTML::Mason.