@@ -1,14 +1,13 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Devel-StackTrace/Attic/Devel-StackTrace-1.03.ebuild,v 1.1 2003/04/22 22:58:14 rac Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Devel-StackTrace/Attic/Devel-StackTrace-1.03.ebuild,v 1.2 2003/06/08 01:21:56 rac Exp $
 
 inherit perl-module
 
-S=${WORKDIR}/${P}
 DESCRIPTION="Devel-StackTrace module for perl"
-SRC_URI="http://www.perl.com/CPAN/modules/by-authors/id/D/DR/DROLSKY/${P}.tar.gz"
-HOMEPAGE="http://www.perl.com/CPAN/modules/by-authors/id/D/DR/DROLSKY/${P}.readme"
-
+SRC_URI="http://www.perl.com/CPAN/modules/by-modules/Devel/${P}.tar.gz"
+HOMEPAGE="http://www.perl.com/CPAN/modules/by-modules/Devel/${P}.readme"
+IUSE=""
 SLOT="0"
 LICENSE="Artistic | GPL-2"
 KEYWORDS="x86 ppc sparc alpha"
