@@ -1,3 +1,3 @@
-MD5 83a21f50d7c70bc8a3083d62182b4782 Devel-StackTrace-1.03.ebuild 640
-MD5 ffbf437698d1ffda0af6fe783a6a22fa ChangeLog 801
+MD5 7d68a4ec000bf49b88ddaf79ad00aeae Devel-StackTrace-1.03.ebuild 609
+MD5 02eb4c2d2429d4c9e41502f0eb4018b1 ChangeLog 900
 MD5 237365ee0c1b7afa2dc1ddeb0a88fe1a files/digest-Devel-StackTrace-1.03 71
